added a logo and some transitions

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <header id="header">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">About</a></li>
+        <ul>   
+            <li class="logo"><h2>Siddhant</h1></li>
+            <span class="right">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Blogs</a></li>
+                <li><a href="#">Home</a></li>
+            </span>
+          
         </ul>
     </header>
 
