added a welcome section with background image

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             </span>
           
         </ul>
+        <div class="welcome">
+            <h1>Welcome to my tech blog</h1>
+            <p>Get all the technology updates at a glance</p>
+        </div>
     </header>
 
     <main>
