added some content in main section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
     </header>
 
     <main>
-        
+        <div class="blog">
+            <h2>PS5</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo perspiciatis ducimus vitae nisi dolores ratione quod mollitia. Voluptatum, quam ex. Impedit expedita alias illo, aspernatur iusto illum ipsa nulla voluptatem!</p>
+        </div>
+        <div class="blog">
+            <h2>PS5</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo perspiciatis ducimus vitae nisi dolores ratione quod mollitia. Voluptatum, quam ex. Impedit expedita alias illo, aspernatur iusto illum ipsa nulla voluptatem!</p>
+        </div>
+        <div class="blog">
+            <h2>PS5</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo perspiciatis ducimus vitae nisi dolores ratione quod mollitia. Voluptatum, quam ex. Impedit expedita alias illo, aspernatur iusto illum ipsa nulla voluptatem!</p>
+        </div>
+
+
     </main>
 
 
