--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <li class="logo"><h2>Siddhant</h1></li>
             <span class="right">
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Blogs</a></li>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
             </span>
           
         </ul>
