--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,18 @@
         </ul>
     </header>
 
+
+    
     <form>
         <input type="text" placeholder="Full Name..">
         <input type="email" placeholder="Email..">
         <input type="submit">
     </form>
+
+
+
+    <footer>
+        <p>© Copyright Siddhant Deshmukh</p>
+    </footer>
 </body>
 </html>
