added a link to logo which on  cliked returns us to the home page

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <header id="header">
         <ul>   
-            <li class="logo"><h2>Siddhant</h1></li>
+            <h2><a href="index.html">Siddhant</a></h1>
             <span class="right">
                 <li><a href="#">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -22,7 +22,7 @@
     </header>
 
 
-    
+
     <form>
         <input type="text" placeholder="Full Name..">
         <input type="email" placeholder="Email..">
